--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="CSS/estilos.css">
 </head>
 <body>
+    <a href="tabla.html"> IR A TABLAS </a><br>
+    <a href="crearDiv.html"> IR A CREADOR DIV </a> <br>
     <form>
     <input type="button" value="Sumar" onclick="Sumar()"></input>
     <input type="button" value="Restar" onclick="Restar()"></input>
